--- a/CoffeeMaster/coffee.html
+++ b/CoffeeMaster/coffee.html
@@ -1,6 +1,8 @@
 <!-- وغيرها h1, h2 استخدم وسوم العناوين المختلفة -->
 <!-- وقم بكتابة الجمل التالية -->
-
+<h1>مرحباً</h1>
+<h2> أنا، عبدالله</h2>
+<h3>starbucks وقهوتي المفضلة أحصل عليها من</h3>
 <!-- 
     مرحباً
     أنا، محمد
